# regatta

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: deepmind_reproductions.md  overview.md  references.md
regatta/core/: evolutionary_games.py  normal_form_games.py  zero_sum.py
regatta/learning/: CFR.py  fictitious_play.py  regret_matching.py
regatta/utils/: payoff_utils.py
tests/: test_core.py
