[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regatta"
version = "0.1.0"
description = "Algorithmic Game Theory and Strategic Interaction — from fundamentals to frontier methods."
readme = "README.md"
authors = [
    { name = "Alexander Braafladt" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "jax",
    "torch",
    "notebook"
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "mypy"]

[tool.setuptools]
# This line tells setuptools explicitly where the package is
packages = ["regatta"]
